fixed align items center for ShoppingCart.html

--- a/view/style/MovieShop.css
+++ b/view/style/MovieShop.css
@@ -160,9 +160,9 @@ h5{
     width: 15%;
     text-align: center;
 }
-.about{
+.newClass{
+    width: 150px;
 
-    margin-top: 100px;
 }
 .title{
     padding-top: 5px;
